[package]
name = "rust_data_struct_and_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lighthouse = { git = "https://github.com/sigp/lighthouse" }
tokio = { version = "1", features = ["full"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
